--- a/index.html
+++ b/index.html
@@ -5,11 +5,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My 100 Days of Code Challenge</title>
+    <title>My 100 Days of Code Journey</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@200;700&family=Oswald:wght@700&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="./styles.css">
 </head>
 
 <body>
-
+    <h1>Flo's Challenge for Monday, February 14th</h1>
+    <p id="todays-challenge">Learn more about CSS and how to apply styles to my webpage.</p>
+    <p>If you also want to learn more about CSS have a look into the
+        <a href="https://developer.mozilla.org/de/docs/Web/CSS">MDN documentation</a>.
+    </p>
 </body>
 
 </html>
