--- a/index.html
+++ b/index.html
@@ -10,15 +10,21 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@200;700&family=Oswald:wght@700&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="./styles/shared.css">
+    <link rel="stylesheet" href="./styles/styles_daily_challenge.css">
 </head>
 
 <body>
+    <div id="head-image">
+        <img src="https://github.com/academind/100-days-of-web-development/blob/02-html-css-basics/extra-files/challenges-trophy.jpg?raw=true"
+            alt="Trophy Icon">
+    </div>
     <h1>Flo's Challenge for Monday, February 14th</h1>
     <p id="todays-challenge">Learn more about CSS and how to apply styles to my webpage.</p>
     <p>If you also want to learn more about CSS have a look into the
         <a href="https://developer.mozilla.org/de/docs/Web/CSS">MDN documentation</a>.
     </p>
+    <p>Explore my <a href="./pages/full-week.html">full week plan</a>.</p>
 </body>
 
 </html>
