Day IV: CSS Box Model and Inline/Block Elements

--- a/pages/full-week.html
+++ b/pages/full-week.html
@@ -15,13 +15,29 @@
 </head>
 
 <body>
-    <h1>My Full-Week Plan</h1>
-    <p>These are my upcoming challenges for this week:</p>
-    <ul>
-        <li>One commit a day</li>
-        <li>Finish the HTML part of the tutorial</li>
-    </ul>
-    <p><a href="../index.html">View today's challenge</a></p>
+    <header>
+        <h1>My Full-Week Plan</h1>
+        <p>These are my goals for the upcoming week.</p>
+        <a href="../index.html">View today's challenge</a>
+    </header>
+    <main>
+        <ul>
+            <li class="highlight-goal">
+                <h2>Tuesday, April 1st</h2>
+                <p>One commit a day</p>
+            </li>
+            <li>
+                <h2>Tuesday, April 2nd</h2>
+                <p>Finish the HTML part of the tutorial</p>
+            </li>
+            <li class="highlight-goal">
+                <h2>Tuesday, April 2nd</h2>
+                <p>Do the practices</p>
+            </li>
+        </ul>
+    </main>
+    <footer>
+    </footer>
 </body>
 
 </html>
